--- a/Game.fsproj
+++ b/Game.fsproj
@@ -25,7 +25,7 @@
   </ItemGroup>
   <ItemGroup>
 <!--    <PackageReference Include="Garnet" Version="0.3.0" />-->
-    <PackageReference Include="Garnet" Version="0.4.0" />
+    <PackageReference Include="Garnet" Version="0.5.3" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
@@ -41,7 +41,8 @@
     <Compile Include="Systems\Input.fs" />
     <Compile Include="Systems\Exit.fs" />
     <Compile Include="Systems\Player.fs" />
-    <Compile Include="Systems\Setup.fs" />
+    <Folder Include="Scenes" />
+    <Compile Include="Setup.fs" />
     <Compile Include="Game1.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
