--- a/Game.fsproj
+++ b/Game.fsproj
@@ -37,13 +37,13 @@
     <Compile Include="Utils\Keyboard.fs" />
     <Compile Include="Utils\GamePad.fs" />
     <Compile Include="Utils\Scene.fs" />
-    <Compile Include="Utils\Events.fs" />
     <Compile Include="Components\Transform.fs" />
     <Compile Include="Components\UI.fs" />
     <Compile Include="Components\Collider.fs" />
     <Compile Include="Components\SpriteRenderer.fs" />
     <Compile Include="Components\Features.fs" />
     <Compile Include="Components\Gravity.fs" />
+    <Compile Include="Systems\Events.fs" />
     <Compile Include="Systems\Input.fs" />
     <Compile Include="Systems\Exit.fs" />
     <Compile Include="Systems\Player.fs" />
